@@ -1,19 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.bonitasoft.console</groupId>
 	<artifactId>bonita-console</artifactId>
 	<name>bonita console</name>
 	<packaging>pom</packaging>
-	<version>6.1.1-SNAPSHOT</version>
+	<version>6.4.0-SNAPSHOT</version>
 
 	<modules>
-		<module>toolkit</module>
-		<module>common</module>
-		<module>rest-api</module>
-		<module>forms</module>
-		<module>console</module>
-		<module>platform</module>
+        <module>looknfeel</module>
 		<module>bonita-home</module>
+        <module>test-toolkit</module>
+		<module>common</module>
+		<module>forms</module>
+        <module>server</module>
+        <module>portal</module>
 	</modules>
 
 	<scm>
@@ -22,10 +23,10 @@
 	</scm>
 
 	<properties>
-		<bonita.engine.version>6.1.1-SNAPSHOT</bonita.engine.version>
-
+		<bonita.engine.version>6.4.0-SNAPSHOT</bonita.engine.version>
+        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		
+
 		<slf4j.version>1.6.1</slf4j.version>
 		<gwt.version>2.5.1</gwt.version>
 		<!-- The following property is used by the gwt-maven plugin. As it does 
@@ -33,6 +34,12 @@
 			gwt.version and gwtVersion properties. Of course the two properties refer 
 			to the same value. -->
 		<gwtVersion>${gwt.version}</gwtVersion>
+		<wro4j.version>1.7.0</wro4j.version>
+		<assertj.version>1.5.0</assertj.version>
+		<powermock.version>1.5.1</powermock.version>
+        <gwtmockito.version>1.1.3</gwtmockito.version>
+        <bonita.home.test>${project.build.directory}/bonita-home</bonita.home.test>
+
 	</properties>
 
 	<dependencyManagement>
@@ -84,13 +91,6 @@
 				<type>zip</type>
 			</dependency>
 
-			<!-- BONITA WEB -->
-			<dependency>
-				<groupId>org.bonitasoft.web</groupId>
-				<artifactId>theme-builder</artifactId>
-				<version>6.1.0</version>
-			</dependency>
-
 			<!-- MISCELLANEOUS -->
 			<dependency>
 				<groupId>commons-fileupload</groupId>
@@ -106,6 +106,11 @@
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
 				<version>1.7</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.1</version>
 			</dependency>
 			<dependency>
 				<groupId>net.htmlparser.jericho</groupId>
@@ -148,6 +153,11 @@
 				<artifactId>jgettext</artifactId>
 				<version>0.13</version>
 			</dependency>
+			<dependency>
+				<groupId>org.lesscss</groupId>
+				<artifactId>lesscss</artifactId>
+				<version>1.3.3</version>
+			</dependency>
 
 			<!-- JSON -->
 			<dependency>
@@ -164,6 +174,16 @@
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>${slf4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ro.isdc.wro4j</groupId>
+				<artifactId>wro4j-core</artifactId>
+				<version>${wro4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ro.isdc.wro4j</groupId>
+				<artifactId>wro4j-extensions</artifactId>
+				<version>${wro4j.version}</version>
 			</dependency>
 
 			<!-- BUILD -->
@@ -201,6 +221,49 @@
 				<artifactId>hamcrest-all</artifactId>
 				<version>1.3</version>
 			</dependency>
+			<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-module-junit4</artifactId>
+				<version>${powermock.version}</version>
+				<scope>test</scope>
+				<exclusions>
+					<exclusion>
+						<artifactId>junit</artifactId>
+						<groupId>junit</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-api-mockito</artifactId>
+				<version>${powermock.version}</version>
+				<scope>test</scope>
+			</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+			<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-module-junit4</artifactId>
+				<scope>test</scope>
+				<version>${powermock.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-api-mockito</artifactId>
+				<scope>test</scope>
+				<version>${powermock.version}</version>
+			</dependency>
+            <dependency>
+                <groupId>com.google.gwt.gwtmockito</groupId>
+                <artifactId>gwtmockito</artifactId>
+                <version>${gwtmockito.version}</version>
+                <scope>test</scope>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -221,24 +284,14 @@
 			<artifactId>hamcrest-all</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.google.gwt.gwtmockito</groupId>
+            <artifactId>gwtmockito</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<repositories>
-		<!-- include repository for GWT maven plugin -->
-		<repository>
-			<id>jboss-public-repository-group</id>
-			<name>JBoss Public Maven Repository Group</name>
-			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
-			<layout>default</layout>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</snapshots>
-		</repository>
 		<repository>
 			<id>oauth</id>
 			<url>http://oauth.googlecode.com/svn/code/maven/</url>
@@ -266,6 +319,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.10</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>2.16</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -298,10 +356,10 @@
 					<version>${gwt.version}</version>
 				</plugin>
 				<plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>1.8</version>
-                </plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>build-helper-maven-plugin</artifactId>
+					<version>1.8</version>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -326,6 +384,16 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>2.4</version>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.6.3.201306030806</version>
+				</plugin>
+				<plugin>
+					<groupId>ro.isdc.wro4j</groupId>
+					<artifactId>wro4j-maven-plugin</artifactId>
+					<version>${wro4j.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
@@ -368,6 +436,19 @@
 										<versionRange>[1.0,)</versionRange>
 										<goals>
 											<goal>enforce</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.jacoco</groupId>
+										<artifactId>jacoco-maven-plugin</artifactId>
+										<versionRange>[0.5,)</versionRange>
+										<goals>
+											<goal>prepare-agent</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
@@ -440,6 +521,42 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8</version>
+				<configuration>
+					<deployAtEnd>true</deployAtEnd>
+				</configuration>
+			</plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack-bonita-home</id>
+                        <phase>none</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.bonitasoft.console</groupId>
+                                    <artifactId>bonita-home</artifactId>
+                                    <classifier>full</classifier>
+                                    <version>${project.version}</version>
+                                    <type>zip</type>
+                                    <overWrite>true</overWrite>
+                                    <excludes>META*/**</excludes>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${bonita.home.test}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
@@ -514,6 +631,117 @@
 							<excludes>
 								<exclude>**/*IntegrationTest*</exclude>
 							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>sonar</id>
+
+			<properties>
+				<!-- Properties to enable jacoco code coverage analysis -->
+				<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+				<!-- Report output directory, in Jenkins use: -Djacoco.outputDir=${WORKSPACE} -->
+				<jacoco.outputDir>${user.home}</jacoco.outputDir>
+				<!-- The destination file for the code coverage report has to be set 
+					to the same value in the parent pom and in each module pom. Then JaCoCo will 
+					add up information in the same report, so that, it will give the cross-module 
+					code coverage. -->
+				<!-- Jacoco output file for UTs -->
+				<jacoco.out.ut.file>jacoco-web-ut.exec</jacoco.out.ut.file>
+				<!-- Tells Sonar where the Jacoco coverage result file is located for 
+					Unit Tests -->
+				<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
+				<!-- Jacoco output file for ITs -->
+				<jacoco.out.it.file>jacoco-web-it.exec</jacoco.out.it.file>
+				<!-- Tells Sonar where the Jacoco coverage result file is located for 
+					Integration Tests -->
+				<sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
+			</properties>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<configuration>
+							<includes>
+								<include>org.bonitasoft.*</include>
+								<include>com.bonitasoft.*</include>
+							</includes>
+							<excludes>
+								<exclude>org.bonitasoft.console.client.*</exclude>
+								<exclude>com.bonitasoft.console.client.*</exclude>
+							</excludes>
+						</configuration>
+						<executions>
+							<execution>
+								<id>prepare-ut-agent</id>
+								<phase>process-test-classes</phase>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+								<configuration>
+									<destFile>${sonar.jacoco.reportPath}</destFile>
+									<propertyName>jacoco.agent.ut.arg</propertyName>
+									<append>true</append>
+								</configuration>
+							</execution>
+							<execution>
+								<id>prepare-it-agent</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+								<configuration>
+									<destFile>${sonar.jacoco.itReportPath}</destFile>
+									<propertyName>jacoco.agent.it.arg</propertyName>
+									<append>true</append>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>integration-test</phase>
+								<goals>
+									<goal>integration-test</goal>
+								</goals>
+								<configuration>
+									<argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}</argLine>
+									<systemPropertyVariables>
+										<!--<bonita.home>${project.build.directory}/bonita/home</bonita.home>-->
+                                        <bonita.home>${bonita.home.test}/bonita</bonita.home>
+									</systemPropertyVariables>
+									<includes>
+										<!--run all possible tests maven failsafe plugin filters classes 
+											by name add those includes if you want to preserve surefire conventions -->
+										<include>**/Test*.java</include>
+										<include>**/*Test.java</include>
+										<include>**/*Test*.java</include>
+
+										<!--the following are failsafe conventions -->
+										<include>**/IT*.java</include>
+										<include>**/*IT.java</include>
+										<include>**/*ITCase.java</include>
+									</includes>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<!-- Avoid executing the tests twice (they are already launched with 
+						failsafe) -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>${jacoco.agent.ut.arg}</argLine>
+							<skipTests>true</skipTests>
 						</configuration>
 					</plugin>
 				</plugins>
